Fix font size on mobile for display screen

--- a/styles.less
+++ b/styles.less
@@ -92,7 +92,7 @@ svg#logo > * {
 
 
     figcaption {
-      font-size: 0.8rem;
+      font-size: 3vw;
     }
   }
 
